--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".SearchActivity" />
-        <activity android:name=".BrowseActivity" />
-        <activity android:name=".IdActivity"></activity>
+        <activity android:name=".search.SearchActivity" />
+        <activity android:name=".browse.BrowseActivity" />
+        <activity android:name=".identification.IdActivity"></activity>
     </application>
 
 </manifest>
